--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
-  "functions": {
-    "api/scan.js": {
-      "maxDuration": 15
+  "functions" {
+    "api/scan.js" {
+      "maxDuration: 15
     }
   }
 }
