--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,12 +1,12 @@
 name = "pythia"
 compatibility_date = "2025-11-04"
 
-# KV Namespace (auto-bound to Pages + Workers)
+# KV (auto-bound to Pages + Workers)
 [[kv_namespaces]]
 binding = "PYTHIA_TOP50_KV"
 id = "6561d92e53c2470296e0ec367a44fa51"
 
-# Workers (cron jobs)
+# Worker 1: Top 50
 [[workers]]
 name = "pythia-top50-cron"
 main = "workers/top50-scheduler.js"
@@ -15,6 +15,7 @@ main = "workers/top50-scheduler.js"
 binding = "PYTHIA_TOP50_KV"
 id = "6561d92e53c2470296e0ec367a44fa51"
 
+# Worker 2: Enterprise Daily
 [[workers]]
 name = "pythia-enterprise-daily"
 main = "workers/enterprise-daily-scanner.js"
