--- a/workers/enterprise-wrangler.toml
+++ b/workers/enterprise-wrangler.toml
@@ -1,7 +1,7 @@
-name = "pythia-enterprise-daily"
-main = "enterprise-daily-scanner.js"
-compatibility_date = "2025-11-04"
-
-[[kv_namespaces]]
-binding = "PYTHIA_TOP50_KV"
-id = "6561d92e53c2470296e0ec367a44fa51"
+name = "enterprise-daily-scanner"
+main = "workers/enterprise-daily-scanner.js"
+compatibility_date = "2025-11-06"
+kv_namespaces = [
+  { binding = "PYTHIA_TOP50_KV", id = "[YOUR_KV_ID]" }
+]
+triggers = { crons = ["0 8 * * *"] }
