--- a/workers/visit-counter-wrangler.toml
+++ b/workers/visit-counter-wrangler.toml
@@ -1,11 +1,9 @@
-name = "pythia-visit-counter"
-main = "visit-counter.js"
-compatibility_date = "2025-11-05"
-
-[[kv_namespaces]]
-binding = "PYTHIA_TOP50_KV"
-id = "6561d92e53c2470296e0ec367a44fa51"
-
-[[routes]]
-pattern = "p-score.me/api/visits"
-custom_domain = true
+name = "visit-counter"
+main = "workers/visit-counter.js"
+compatibility_date = "2025-11-06"
+kv_namespaces = [
+  { binding = "PYTHIA_TOP50_KV", id = "[YOUR_KV_ID]" }
+]
+routes = [
+  { pattern = "p-score.me/api/visits", zone_name = "p-score.me" }
+]
