--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,5 +2,5 @@ name = "pythia"
 compatibility_date = "2025-11-06"
 pages_build_output_dir = "."
 kv_namespaces = [
-  { binding = "PYTHIA_TOP50_KV", id = "[YOUR_KV_ID]" }
+  { binding = "PYTHIA_TOP50_KV", id = "6561d92e53c2470296e0ec367a44fa51" }
 ]
